@@ -15,6 +15,7 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+server/weather.c: Fix possible buffer overflows.
 server/gods.c: Use correct format specifier in sprintf().
 server/spell_util.c: Fix return statements with no value in non-void
    function.
